@@ -4,6 +4,7 @@
         org.clojure/tools.reader {:mvn/version "1.3.6"}
         babashka/fs {:mvn/version "0.1.0"}
         clj-kondo/clj-kondo {:mvn/version "2021.10.19"}
+        dev.nubank/docopt {:mvn/version "0.6.1-fix7"}
         metosin/malli {:mvn/version "0.6.2"}
         rewrite-clj/rewrite-clj  {:mvn/version "1.0.699-alpha"}}
 
